@@ -9,8 +9,8 @@ import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingDeque;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
+import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import javax.annotation.concurrent.ThreadSafe;
 
 import org.marketcetera.metrics.MetricService;
@@ -203,7 +203,7 @@ public abstract class QueueProcessor<Clazz>
      */
     protected int size()
     {
-        return new Long(queueCounterMetric.getCount()).intValue();
+        return Long.valueOf(queueCounterMetric.getCount()).intValue();
     }
     /**
      * Gets the queue to process.
